--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <link rel="stylesheet" href="style.css" /> -->
 </head>
-<body>
+<body style="margin: 0px !important;">
   <app-root></app-root>
 </body>
 </html>
